option java_package = "watchedepisodes.servlets.protocols";
option java_outer_classname = "GetSeriesProtocol";

import "protocol_types.proto";

message GetSeriesResponse {
	required PBSeries series = 1;
}